Allow scrolling in #content to avoid ugly overflow
On narrow screens, the content could overflow causing the top bar to
cut off.

--- a/css/info.css
+++ b/css/info.css
@@ -97,6 +97,9 @@ body {
     margin: 5px 0;
 }
 
+#content {
+    overflow: auto;
+}
 #content a {
     color: rgb(110, 132, 163);
     text-decoration: none;
